--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.pingmiu</groupId>
-    <artifactId>springCloud-consumer</artifactId>
+    <groupId>com.hackathon</groupId>
+    <artifactId>movie</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>springCloud-consumer</name>
+    <name>hackathon-movie</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
