--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 server.port = 8099
 
 spring.application.name = movie
+
+
+#数据库配置
+mybatis.type-aliases-package=com.hackathon.entity
+
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/movie?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username = root
+spring.datasource.password = mysql
+
+
+
