--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name = movie
 mybatis.type-aliases-package=com.hackathon.entity
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/movie?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://99.48.192.165:3306/movie?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = mysql
 
